--- a/Stickiller/Stickiller.vcxproj.filters
+++ b/Stickiller/Stickiller.vcxproj.filters
@@ -38,19 +38,19 @@
     <ClCompile Include="src\Display\DisplayTask.cpp">
       <Filter>src\Display</Filter>
     </ClCompile>
-    <ClCompile Include="Task.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\GameTask.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
     <ClCompile Include="src\Display\DisplayManager.cpp">
       <Filter>src\Display</Filter>
     </ClCompile>
-    <ClCompile Include="MenuManager.cpp">
+    <ClCompile Include="src\Game\GameManager.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\GameManager.cpp">
+    <ClCompile Include="src\Task.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\MenuManager.cpp">
       <Filter>src\Game</Filter>
     </ClCompile>
   </ItemGroup>
